--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ h2 {
 .changelog li .left {
   color: #586E75;
   font-weight: 300;
-  min-width: 200px;
+  min-width: 18em;
 }
 .changelog li .left:before {
   content: '';
@@ -110,6 +110,12 @@ h2 {
   visibility: visible;
   max-height: 100px;
   transition: max-height 0.5s linear;
+}
+.changelog li .desc .desc-points li{
+  margin-top: 0;
+}
+.changelog li .desc p {
+  margin: 0;
 }
 .changelog .loading {
   animation: blinker 1s linear infinite;
@@ -245,19 +251,9 @@ h2 {
   font-style: normal;
 }
 .flash {
-  animation: 1s flash infinite;
+  color: #268BD2;
 }
-@keyframes flash {
-  0% {
-    text-shadow: 0px 0px 5px #cacacc;
-  }
-  50% {
-    text-shadow: none;
-  }
-  100% {
-    text-shadow: 0px 0px 5px #cacacc;
-  }
-}
+
 @media (max-width: 600px) {
   .changelog li .left {
     min-width: 160px;
