--- a/styles.scss
+++ b/styles.scss
@@ -265,3 +265,12 @@ h2 {
   }
 }
 
+.feather {
+  width: 24px;
+  height: 24px;
+  stroke: $blue;
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: none;
+}
